--- a/empleados/templates/base.html
+++ b/empleados/templates/base.html
@@ -8,11 +8,19 @@
       {% block title %}Enviar formulario con Django Python a {% endblock %}
     </title>
     <link rel="icon" type="image/png" href="{% static 'imgs/favicon.png'%}" />
+
+    <!--fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;1,400;1,500&display=swap"
       rel="stylesheet" />
+
+    <!--fontawesome-->
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v6.3.0/css/all.css" />
+
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" />
@@ -21,10 +29,11 @@
   </head>
   <body>
     <div
-      class="container mt-5"
+      class="dashboard container mt-5"
       style="width: 95% !important; padding: 50px 0px; background: #fff">
       {% include 'mensajes.html' %}
       <!---->
+
       {% block content %} {% endblock %}
     </div>
 
