--- a/empleados/templates/base.html
+++ b/empleados/templates/base.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>
-      {% block title %}Enviar formulario con Django Python a {% endblock %}
+      {% block title %}Crud Completo Django Python MySQL {% endblock %}
     </title>
     <link rel="icon" type="image/png" href="{% static 'imgs/favicon.png'%}" />
 
@@ -23,9 +23,12 @@
 
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" />
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" />
+
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" />
     <link rel="stylesheet" href="{% static 'css/home.css' %}" />
+
+    {% block customCSS %} {% endblock %}
   </head>
   <body>
     <div
@@ -35,6 +38,10 @@
       <!---->
 
       {% block content %} {% endblock %}
+      <a href="{% url 'listar_empleados' %}" id="bottomRightButton">
+        Empleados
+        <i class="bi bi-people-fill"></i>
+      </a>
     </div>
 
     <script
@@ -45,6 +52,7 @@
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
       integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
       crossorigin="anonymous"></script>
-    <script src="{% static 'js/home.js' %}"></script>
+    <script rc="{% static 'js/home.js' %}"></script>
+    {% block customJS %} {% endblock %}
   </body>
 </html>
